<resources>
    <string name="app_name">Bus.lk</string>
    <string name="n1">Admin Page</string>
    <string name="n2">Bus Details</string>
    <string name="n3">Bus Name</string>
    <string name="n4">Bus Name</string>
    <string name="n5">From</string>
    <string name="n6">Travel Start Place</string>
    <string name="n7">To</string>
    <string name="n8">Travel Stop Place</string>
    <string name="n9">Time</string>
    <string name="n10">Time</string>
    <string name="n11">Cost</string>
    <string name="n12">Full Ticket Price</string>
    <string name="n13">Bus Number</string>
    <string name="n14">Bus Number</string>
    <string name="n15">ADD</string>
    <string name="n16">DISPLAY</string>
    <string name="n17">UPDATE</string>
    <string name="n18">DELETE</string>
    <string name="n19">More Details</string>
    <string name="e1">sachini</string>
    <string name="m1">More Details</string>
    <string name="m2">Bus Names</string>
    <string name="m3">Details</string>
    <string name="m4">1)No of Seats-30</string>
    <string name="m5">Dewmi tours</string>
    <string name="m6">2)Pacilities-A/C,TV</string>
    <string name="m7">3)Contact No-0729087456</string>
    <string name="m8">Meesha Tours</string>
    <string name="m9">1)No of Seats-50</string>
    <string name="m10">2)Pacilities-A/C</string>
    <string name="m11">3)Contact No-0719823456</string>
    <string name="m12">Perera Tours</string>
    <string name="m13">1)No of Seats-40</string>
    <string name="m14">Saman Tours</string>
    <string name="m15">2)Contact No-0782345678</string>
    <string name="m16">Kumara Bus</string>
</resources>
